Add subscription form to profile page

--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -63,6 +63,25 @@
                         <span class="metric-caption">Sedán 2020 · SUV 2022</span>
                     </article>
                 </div>
+                <aside class="subscription-card" aria-label="Formulario de suscripción a novedades">
+                    <h2>Suscríbete y recibe novedades</h2>
+                    <p>Mantente al día con promociones, recordatorios y novedades personalizadas.</p>
+                    <form class="subscription-form" action="#" method="post">
+                        <label class="subscription-label" for="subscription-email">Correo electrónico</label>
+                        <div class="subscription-input-group">
+                            <input
+                                type="email"
+                                id="subscription-email"
+                                name="subscription-email"
+                                placeholder="tucorreo@ejemplo.com"
+                                required
+                                autocomplete="email"
+                            />
+                            <button type="submit" class="button">Suscribirme</button>
+                        </div>
+                        <p class="subscription-note">Puedes darte de baja cuando quieras desde cualquier correo que recibas.</p>
+                    </form>
+                </aside>
             </section>
 
             <section class="history" id="historial" aria-labelledby="historial-title">
