Consolidar narrativa en sección Sobre nosotros

--- a/pages/paginainicio.html
+++ b/pages/paginainicio.html
@@ -40,7 +40,7 @@
       <nav class="main-nav" aria-label="Principal">
         <a href="#inicio" class="nav-link active">Inicio</a>
         <a href="#citas" class="nav-link">Citas</a>
-        <a href="#mensajes" class="nav-link">Mensajes</a>
+        <a href="./sobre-nosotros.html" class="nav-link">Sobre nosotros</a>
         <a href="#ubicacion" class="nav-link">Ubicación</a>
         <a href="./perfil.html" class="nav-link">Perfil</a>
         <a href="./registro-taller.html" class="nav-link" data-visible-for="mecanico" hidden>
