--- a/pages/sobre-nosotros.html
+++ b/pages/sobre-nosotros.html
@@ -24,14 +24,14 @@
   <body>
     <header class="site-header">
       <div class="brand">
-        <img src="../assets/logo.png" alt="Mechapp" class="brand-logo" />
+        <img src="../assets/logo-oscuro.png" alt="Mechapp" class="brand-logo">
         <span class="brand-name">Mechapp</span>
       </div>
       <nav class="main-nav" aria-label="Principal">
         <a href="./paginainicio.html" class="nav-link">Inicio</a>
         <a href="./sobre-nosotros.html" class="nav-link active">Sobre nosotros</a>
-        <a href="./paginainicio.html#ubicacion" class="nav-link">Ubicación</a>
         <a href="./resenas-mecanicos.html" class="nav-link">Reseñas</a>
+        <a href="./paginainicio.html#ubicacion" class="nav-link">Ubicación</a>
         <a
           href="./registro-taller.html"
           class="nav-link"
@@ -44,7 +44,7 @@
       <div class="header-actions">
         <a
           href="./login.html"
-          class="button button-secondary"
+          class="button button-primary"
           data-auth-visibility="unauthenticated"
         >
           Iniciar sesión
