--- a/pages/admin.html
+++ b/pages/admin.html
@@ -30,7 +30,7 @@
         <a href="#usuarios" class="nav-link">Usuarios</a>
       </nav>
       <div class="header-actions">
-        <button class="button button-secondary" id="logout-button" type="button">Cerrar sesión</button>
+        <button class="button button-primary" id="logout-button" type="button">Cerrar sesión</button>
       </div>
     </header>
 
