--- a/pages/resenas-mecanicos.html
+++ b/pages/resenas-mecanicos.html
@@ -20,7 +20,7 @@
   <body>
     <header class="site-header">
       <div class="brand">
-        <img src="../assets/logo.png" alt="Mechapp" class="brand-logo" />
+        <img src="../assets/logo-oscuro.png" alt="Mechapp" class="brand-logo">
         <span class="brand-name">Mechapp</span>
       </div>
       <nav class="main-nav" aria-label="Principal">
@@ -30,8 +30,8 @@
         <a href="./registro-taller.html" class="nav-link" data-visible-for="mecanico" hidden>Registrar Taller</a>
       </nav>
       <div class="header-actions">
-        <a href="./login.html" class="button button-secondary" data-auth-visibility="unauthenticated">Iniciar sesión</a>
-        <a href="./registro.html" class="button ghost">Crear Cuenta</a>
+        <a href="./login.html" class="button button-primary" data-auth-visibility="unauthenticated">Iniciar sesión</a>
+        <a href="./registro.html" class="button button-primary">Crear Cuenta</a>
       </div>
     </header>
 
