--- a/pages/agendar-cita.html
+++ b/pages/agendar-cita.html
@@ -122,7 +122,9 @@
 
           <div class="field">
             <label for="visit-time">Hora preferida</label>
-            <input type="time" id="visit-time" name="visit-time" min="09:00" max="18:00" required />
+            <div id="visit-time-slots" class="time-slot-grid" role="listbox" aria-label="Selecciona una hora"></div>
+            <p class="field-helper" id="time-helper">Selecciona un mecánico para ver los horarios disponibles.</p>
+            <input type="hidden" id="visit-time" name="visit-time" required />
           </div>
 
           <input type="hidden" id="scheduled-for" name="scheduled-for" />
